# Folding-Atomata

./: README.md  gitInstall.sh  image urls  installFromSrc.sh
deb/DEBIAN/: control
deb/usr/share/applications/: FoldingAtomata.desktop
deb/usr/share/doc/foldingatomata/: README
debian/: changelog  control  copyright
debian/extra_includes/: Folding Atomata.desktop  demoProtein  manpage
debian/source/: include-binaries
src/: CMakeLists.txt  Options.cpp  Options.hpp  clean.sh  compileRun.sh  main.cpp  main.hpp  pushPackage.sh
src/Modeling/: BaseModel.cpp  BaseModel.hpp  InstancedModel.cpp  InstancedModel.hpp  Model.cpp  Model.hpp  Object.hpp  Renderable.hpp
src/Modeling/DataBuffers/: ColorBuffer.cpp  ColorBuffer.hpp  DataBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  NormalBuffer.cpp  NormalBuffer.hpp  OptionalDataBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Modeling/DataBuffers/SampledBuffers/: CoordinateMapReader.cpp  CoordinateMapReader.hpp  CubeTextureMap.cpp  CubeTextureMap.hpp  Image.cpp  Image.hpp  SampledBuffer.cpp  SampledBuffer.hpp  TextureBuffer.cpp  TextureBuffer.hpp  TexturedCube.cpp  TexturedCube.hpp
src/Modeling/Mesh/: Mesh.cpp  Mesh.hpp  PlyParser.cpp  PlyParser.hpp  Quad.struct  Triangle.struct
src/Modeling/Shading/: Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  ShaderSnippet.cpp  ShaderSnippet.hpp  ShaderUtilizer.hpp
src/PyON/: StringManip.cpp  StringManip.hpp  TrajectoryParser.cpp  TrajectoryParser.hpp  sampleOutput.txt
src/Resources/Coordinate Maps/: cube.coord  square.coord
src/Resources/Meshes/: cube.ply  skybox cube.ply  square.ply
src/Sockets/: ClientSocket.cpp  ClientSocket.h  ClientSocket.hpp  Connection.cpp  Connection.hpp  Socket.cpp  Socket.h  Socket.hpp  SocketException.h  SocketException.hpp
src/Trajectory/: Atom.cpp  Atom.hpp  Bond.cpp  Bond.hpp  BoundingBox.cpp  BoundingBox.hpp  ProteinAnalysis.cpp  ProteinAnalysis.hpp  Snapshot.cpp  Snapshot.hpp  Topology.cpp  Topology.hpp  Trajectory.cpp  Trajectory.hpp
src/Viewer/: FAHClientIO.cpp  FAHClientIO.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  SlotViewer.cpp  SlotViewer.hpp  User.cpp  User.hpp  Viewer.cpp  Viewer.hpp
src/World/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Scene.cpp  Scene.hpp
src/debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  foldingatomata.cron.d.ex  foldingatomata.default.ex  foldingatomata.doc-base.EX  foldingatomata.substvars  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
src/debian/source/: include-binaries
src/glm/core/: _detail.hpp  type_vec1.inl  type_vec2.inl
src/glm/gtc/: matrix_transform.hpp  matrix_transform.inl
src/libs/glm/: Makefile  cmake_install.cmake  glm
src/libs/glm/core/: _swizzle.hpp  type_vec3.inl  type_vec4.inl
src/libs/glm/gtc/: matrix_transform.inl  quaternion.inl
src/libs/png++/: Makefile  cmake_install.cmake  consumer.hpp  convert_color_space.hpp  error.hpp  ga_pixel.hpp  info.hpp  info_base.hpp  io_base.hpp  packed_pixel.hpp  reader.hpp  rgb_pixel.hpp  rgba_pixel.hpp
src/libs/tclap/: Arg.h  CmdLine.h  MultiArg.h  MultiSwitchArg.h  StdOutput.h  SwitchArg.h  ValueArg.h  XorHandler.h
